refactor(system): 重构系统模块的VO类和定时任务处理